src/test/ui/impl-trait/impl-generic-mismatch-ab.stderr
error[E0053]: method `foo` has an incompatible type for trait
  --> $DIR/impl-generic-mismatch-ab.rs:8:32
   |
LL |     fn foo<A: Debug>(&self, a: &A, b: &impl Debug);
   |                                -- type in trait
...
LL |     fn foo<B: Debug>(&self, a: &impl Debug, b: &B) { }
   |                                ^^^^^^^^^^^ expected type parameter, found a different type parameter
   |
   = note: expected type `fn(&(), &B, &impl Debug)`
              found type `fn(&(), &impl Debug, &B)`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0053`.
